<resources>
    <!-- Nome label Activity -->
    <string name="app_name">Dispensa</string>
    <string name="AlimentiActivity">Alimenti</string>
    <string name="FarmaciActivity">Farmaci</string>
    <string name="ListaSpesaActivity">Lista della spesa</string>
    <string name="ArticoliScadutiActivity">Articoli scaduti</string>
    <string name="AddAlim">Nuovo alimento</string>
    <string name="AddFarm">Nuovo farmaco</string>
    <string name="dispAlim">Dispensa alimenti</string>
    <string name="dispFarm">Dispensa farmaci</string>

    <!-- Bottoni Home -->
    <string name="AlimentiButton">Alimenti</string>
    <string name="FarmaciButton">Farmaci</string>
    <string name="ListaSpesaButton">Lista della spesa</string>
    <string name="ArticoliScadutiButton">Articoli scaduti</string>


    <string name="NewAlimentoTx">Inserisci un nuovo alimento: </string>
    <string name="VisualAlimentiTx">Visualizza la dispensa degli alimenti: </string>
    <string name="buttonNewAli">Nuovo alimento</string>
    <string name="OpenDispensaButton">Apri dispensa</string>
    <string name="NewFarmacoTx">Inserisci un nuovo farmaco: </string>
    <string name="VisualFarmaciTx">Visualizza la dispensa dei farmaci: </string>
    <string name="buttonNewFar">Nuovo farmaco</string>

    <!-- NuovoAlimento && NuovoFarmaco -->
    <string name="TxMarca">Marca</string>
    <string name="TxTipo">Tipo</string>
    <string name="CBAR">Codice a barre</string>
    <string name="InsCBAR">Inserisci codice a barr...</string>
    <string name="InsMarca">Inserisci marca...</string>
    <string name="InsTipologia">Inserisci il tipo...</string>
    <string name="TxScadenza">Scadenza: </string>
    <string name="HintScadenza">Inserisci scadenza...</string>
    <string name="insertAlim">Inserisci</string>
    <string name="multiSwitch">Più articoli</string>

    <string name="typeAli">ALI</string>
    <string name="typeFarm">FAR</string>

    <string name="detect">Rilevato: </string>
    <string name="confirm">Conferma</string>

    <string name="quantity">Quantità</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="delete">Elimina</string>
    <string name="move">Aggiungi in lista della spesa</string>
    <string name="back">Annulla</string>

    <string name="Home">Home Dispensa</string>
    <string name="Notify">Notifiche</string>
    <string name="Info">Info</string>
    <string name="future">Scadenze future: </string>

    <string name="insertDay"> Inserisci intervallo </string>
    <string name="insertHour">Inserisci nuovo orario</string>
    <string name="twHour">Orario di notifica: </string>

    <string name="product">Prodotto</string>
    <string name="shopping">Acquistato</string>
    <string name="adddProdList">Inserisci prodotto</string>
    <string name="RemuveShop">Rimuovi acquistati</string>

    <string name="futureDay">Inserisci entro quanti giorni mostrare le scadenze</string>
    <string name="ssetfuture">Intervallo scadenze</string>

    <string name="info">
        Dispensa è un app che consente di poter salvare le scadenze di alimenti e medicinali.
        Dal menù laterale seleziona l\orario in cui vuoi ricevere le notifiche che giornalmente ti ricorderanno quali prodotti stanno per scadere.
        Impostando l\intervallo delle scadenze si decide in qauale intervallo di giorni si vuole avere un feedback dei prodotti che scadranno.




    </string>

    <string name="info2">
        Icons made by Smashicons, Freepik, Good Ware, Gregor Cresnar, Flat Icons, from www.flaticon.com
    </string>

</resources>
