<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ListaSpesaAvtivity.AggiungiArticloloActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewBarCodeLis"
                android:layout_width="92dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/CBAR"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InsTipoLis" />

            <EditText
                android:id="@+id/InsMarcaLis"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/InsMarca"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textMarcaLis" />

            <Button
                android:id="@+id/barCodeReadLis"
                android:layout_width="70dp"
                android:layout_height="58dp"

                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/barcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InsTipoLis" />

            <Button
                android:id="@+id/InsertLis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_border"
                android:text="@string/insertAlim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barCodeReadLis" />

            <TextView
                android:id="@+id/barCodeLis"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/InsCBAR"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@+id/barCodeReadLis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBarCodeLis" />

            <TextView
                android:id="@+id/textMarcaLis"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/TxMarca"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTipoLis"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/TxTipo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InsMarcaLis" />

            <EditText
                android:id="@+id/InsTipoLis"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"

                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/InsTipologia"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTipoLis" />

            <TextView
                android:id="@+id/textViewQuantLis"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barCodeLis" />

            <EditText
                android:id="@+id/InsQuantLis"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:hint="@string/quantity"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/textViewQuantLis"
                app:layout_constraintTop_toBottomOf="@+id/barCodeLis" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>