<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/AlimentiButtonHome"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="63dp"
        android:text="@string/AlimentiButton"
        app:layout_constraintBottom_toTopOf="@+id/ListaSpesaButtonHome"
        app:layout_constraintEnd_toStartOf="@+id/FarmaciButtonHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <Button
        android:id="@+id/FarmaciButtonHome"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="63dp"
        android:text="@string/FarmaciButton"
        app:layout_constraintBottom_toTopOf="@+id/ArticoliScadutiButtonHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AlimentiButtonHome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ListaSpesaButtonHome"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="235dp"
        android:text="@string/ListaSpesaButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ArticoliScadutiButtonHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlimentiButtonHome" />

    <Button
        android:id="@+id/ArticoliScadutiButtonHome"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="235dp"
        android:text="@string/ArticoliScadutiButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ListaSpesaButtonHome"
        app:layout_constraintTop_toBottomOf="@+id/FarmaciButtonHome" />
</androidx.constraintlayout.widget.ConstraintLayout>